deploy/keycloak.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
    component: keycloak
spec:
  rules:
  - host: keycloak.devlocal
    http:
      paths:
      - backend:
          serviceName: keycloak
          servicePort: http
        path: /
  tls:
  - hosts:
      - keycloak.devlocal
    secretName: keycloak-cert
